# Comp-club-task

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: CI.yml
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  CompClub.cpp  CompClub.h  Event.cpp  Event.h  EventIds.h  TableInfo.cpp  TableInfo.h  utils.cpp  utils.h
tests/: CMakeLists.txt  CompClubTest.cpp
tests/input_files/: answer2.txt  answer3.txt  answer4.txt  answer6.txt  answer7.txt  answer8.txt  input3.txt  input4.txt  input6.txt  input7.txt  input8.txt
